<resources>
    <string name="app_name">MainApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">Button</string>
    <string name="empty" />
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="undefined">Undefined</string>
    <string name="mode">Mode</string>
    <string name="subheader">Subheader</string>
    <string name="header">Header</string>
    <string name="theme">Theme</string>
</resources>